css/style.css
body{
    background-color: #f3f3f3;
    font-family: 'Source Sans Pro', sans-serif;
}
.btn:focus, .btn:active{
    outline: none !important;
}
a:hover{
    text-decoration: none;
}
.navbar-brand{
padding:5px 0 0 0;
}
.navbar-brand>img{
    max-height:40px;
}
ul li{
    list-style-type: none;
}
.top-bar{
    background-color: #282f39;
    color: #fff;
    z-index: 1;
    position: relative;
    margin-bottom: 15px;
}
a.dropdown-toggle {
    color: #fff;
    cursor: pointer;
  }
.top-bar-right{
    float: right;
    transform: translateY(60%);
}
.top-bar-right > li{
    display: inline-block;
    margin-right: 20px;
 }
.top-bar-right li a{
    line-height: 
};
span.profile-icon {
    max-width: 30px;
    height: auto;
}
.theme-color{
    background-color: #ffcc00;
}
.white-font{
    color: #fff;
}
/*navigation*/
.nav-part {
    background: #fff;
    box-shadow: 0px 0px 3px #dfdff1;
    padding: 10px 0px 5px;
    margin: 0px 0px 10px 0px;
}
.nav-part li{
    display: inline-block;
    padding: 5px 10px;
}
.profile-pic img{
    max-width: 25px;
 }
.nav-part li a{
    display: block;
    text-decoration: none;
    color:#333;
}
.nav-part li a i {
    padding: 12px 5px;
    border: 1px solid rgba(255, 204, 0, 1);
    width: 40px;
    height: 40px;
    border-radius: 50%;
}
.nav-part li a:hover i {
    background-color: rgba(255, 204, 0, 1);
}
.btn-info, .btn-info:hover{
    background: rgba(255, 204, 0, 1);
    border-color:rgba(255, 204, 0, 1);
}
.nav-part li a span {
    display: block;
    font-size: 13px;
}
.buy-number-section .filter-button{ text-align:right;}
.buy-number-section {
    box-shadow: 1px 1px 2px #DDE;
    padding: 15px 0px 5px 0px;
}
.buy-number-section h2 {
    font-size: 18px;
    font-weight: 600;
    margin: 0px 0px;
    padding: 5px 15px 10px;
}
.buy-number-section th{
    
}
.padding-left {
    padding-left:0px;
}
.padding-right{
    padding-right:0px;
}
/* leftnav*/

    .left-nav .list-group{
        box-shadow: 0 0 2px rgba(0, 0, 0, 0.08);
        -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.08);
    }
    .left-nav .list-group-item{
    padding: 10px 20px;
    border: 1px solid #ececec;
    font-size: 13px;
    }
    .left-nav .list-group-item:first-child{
    padding: 10px 20px 10px 50px;
    }
    .left-nav .list-group-item i {
    margin: 0 16px 0 0;
    width: 12px;
    }
    .list-group-item.active{
        background-color: rgba(255, 204, 0, 1);
        border:0;
    }
    .list-group-item.active:hover{
        background-color: rgba(255, 204, 0, 1);
            }
/*table*/
.navbar-inverse{background:#282F39}
.table > thead > tr > th {border-bottom: none;background: #F8F8F8;}
.table > tbody > tr > td{ border-color:#f8f8f8; }
#search-icon { position: absolute; right:auto; }
.form-control{ text-indent:15px }
.filter-button{ text-align:center; }
.filter-button .btn-default, .filter-button .btn-default:hover{ background:transparent; }
.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus {
	color: #000;
	cursor: default;
	background-color: #fff;
	border: 0;
	/* border-bottom-color: transparent; */
	border-bottom: 2px solid #FFCC00;
}
.nav-tabs > li.active > a:hover{ border:none ; border-bottom: 2px solid #FFCC00; }
.nav > li > a,.nav > li > a:hover{ background:none ; border:0; color:#000;}
#exTab2{margin-bottom:5px; }
.bg-white{
    background-color: #fff;
}
.table-modal .modal-dialog{
	width: 400px;
}
.table-modal .modal-content{
	border-radius: 0;
    border: 1px solid #ddd;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
}
.table-modal .modal-header {
    padding: 7px 20px;
    border-bottom: none;
    background: #eee;
}
.table-modal .modal-title {
    font-size: 16px;
    color: #444;
    font-weight: 600;
}
.table-modal .modal-body {
    padding: 20px 20px;
}
ul.breadcrumb {
    background: none;
    padding-left: 0px;
    color: #333;
    margin-bottom:10px;
}
ul.breadcrumb li a {
    color: #333;
}
.btn-info{
    color:#333;
}
.btn-primary, .btn-primary:hover {
    color: #333333!important;
    background-color: #ffcc00;
    border-color: #ffcc00;
}
.btn-primary:focus, .btn-primary:active {
    color: #333;
    background-color: #ffcc00 !important;
    border-color: #ffcc00 !important;
}
.left-nav .list-group-item.active,.left-nav  .list-group-item.active:focus,.left-nav .list-group-item.active:hover{
    color:#333;
}
.table-hover>tbody>tr:hover {
    background-color: #ffcc0059;
    cursor: pointer;
}
.table-modal label{
	/* font-weight: normal; */
}
.breadcrumb>li+li:before{
    content: "\003e";
    font-weight:400;
    color:#333;
}
.notify-label{
	/* font-size: 16px; */
	/* margin: 0 0 14px; */
}
.table-modal .modal-footer {
    padding: 10px 20px 20px;
    border-top: none;
	text-align: center;
}
.table-modal .modal-header .close {
	font-size: 29px;
    font-weight: normal;
    line-height: 25px;
}
.hr-divider{
	margin: 34px 0 24px;
}
.save-button{
	width: 120px;
}
.modal-backdrop{
    background-color: transparent;
}
.table-modal.modal.fade .modal-dialog{
    top: 50%;
    right: 65px;
    position: absolute;
    -webkit-transform: translate(0, -50%);
    -ms-transform: translate(0, -50%);
    -o-transform: translate(0, -50%);
    transform: translate(0, -50%);
}
.table-modal.modal.in .modal-dialog {
    -webkit-transform: translate(-10%, -50%);
    -ms-transform: translate(-10%, -50%);
    -o-transform: translate(-10%, -50%);
    transform: translate(-10%, -50%);
}
.table-modal .form-control{
    text-indent: 0;
}
.buy-number td{
    width:25%;
}
.buy-number td:first-child, .buy-number th:first-child{
    padding-left:4%;
}

.list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover{background-color: #ffcc00;
    border-color: #ffcc00;}

